2011-01-16  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] fast/events/scroll-after-click-on-tab-index has been failing on the bots
        https://bugs.webkit.org/show_bug.cgi?id=49177

        * platform/gtk/Skipped: Unskip this test, as it's now passing.
2011-01-16  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] fast/events/scroll-after-click-on-tab-index has been failing on the bots
        https://bugs.webkit.org/show_bug.cgi?id=49177

        * platform/ScrollView.cpp: Move the platform guards around a little. GTK+
        now shares the implementation of platformAddChild and platformRemoveChild,
        but has its own implementation of removeChild, which knows how to inform
        main frame scrollbars that they no longer control the WebCore scrollbar.
        * platform/gtk/MainFrameScrollbarGtk.cpp:
        (MainFrameScrollbarGtk::attachAdjustment): If we are attaching the same adjustment
        that we already have, bail out early. Apply the value changed signal handler
        after configuring the adjustment. We don't want our reset of the adjustment to
        stomp on WebCore values.
        (MainFrameScrollbarGtk::gtkValueChanged): Do not adjust the value if the WebCore
        state already matches ours. This prevents some unnecessary recursion
        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::removeChild): Added, special cases main frame scrollbars
        which need their adjustments detached.

Canonical link: https://commits.webkit.org/66159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75914 268f45cc-cd09-0410-ab3c-d52691b4dbfc